discussion/kv_engine/167564/167564_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49156: wip

Change-Id: Ib9cf3afe3afa8bc73fbfcd9ac70dfb34c05861b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-12-15 19:27:23.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-15 19:34:07.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35983/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35983/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42443/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42443/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14526/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5: error: no matching function for call to "destroy_mock_cookie" [clang-diagnostic-error]
    destroy_mock_cookie(cookie1);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:165:6: note: candidate function not viable: 1st argument ("const CookieIface *") would lose const qualifier
void destroy_mock_cookie(CookieIface* cookie);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1271:5: error: no matching function for call to "destroy_mock_cookie" [clang-diagnostic-error]
    destroy_mock_cookie(cookie2);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:165:6: note: candidate function not viable: 1st argument ("const CookieIface *") would lose const qualifier
void destroy_mock_cookie(CookieIface* cookie);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1303:5: error: no matching function for call to "destroy_mock_cookie" [clang-diagnostic-error]
    destroy_mock_cookie(cookie1);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:165:6: note: candidate function not viable: 1st argument ("const CookieIface *") would lose const qualifier
void destroy_mock_cookie(CookieIface* cookie);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1304:5: error: no matching function for call to "destroy_mock_cookie" [clang-diagnostic-error]
    destroy_mock_cookie(cookie2);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:165:6: note: candidate function not viable: 1st argument ("const CookieIface *") would lose const qualifier
void destroy_mock_cookie(CookieIface* cookie);
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14526/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5:
error: no matching function for call to "destroy_mock_cookie" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4170/ : FAILURE

Compile error at [2021-12-15T19:31:03.014Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5:
error: no matching function for call to "destroy_mock_cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4170/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17238/ : FAILURE

Compile error at [2021-12-15T19:30:07.586Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5:
error: no matching function for call to "destroy_mock_cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17238/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16169/ : FAILURE

Compile error at [2021-12-15T19:30:50.697Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:25:
error: invalid conversion from ?const CookieIface*? to ?CookieIface*? [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16464/ : FAILURE

Compile error at [2021-12-15T19:30:27.957Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:25:
error: invalid conversion from ?const CookieIface*? to ?CookieIface*? [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16464/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15328/ : FAILURE

Compile error at [2021-12-15T19:32:56.929Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5:
error: no matching function for call to "destroy_mock_cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15328/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24573/ : FAILURE

Compile error at [2021-12-15T19:29:24.272Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:5:
error: no matching function for call to "destroy_mock_cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4228/ : FAILURE

Compile error at [2021-12-15T19:32:45.588Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:1270:25:
error: invalid conversion from ?const CookieIface*? to ?CookieIface*? [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13356/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
